# eventserver

./: Cargo.toml  README.md  send-event.py  server.py
migrations/20160331160725_events/: up.sql
migrations/20160331160930_access_keys/: down.sql  up.sql
src/: context.rs  http.rs  macros.rs  main.rs  models.rs  msgpack.rs  rpc.rs  rpc_methods.rs  schema.rs  switchboard.rs
