[package]
name = "eventserver"
version = "0.1.0"
authors = ["Andreas Ots <andreasots@gmail.com>"]

[dependencies]
rotor = "0.6.3"
rotor-http = "0.7.0"
rotor-stream ="0.6.2"
xdg-basedir = "1.0.0"
serde = "0.7.0"
serde_json = "0.7.0"
serde_macros = "0.7.0"
log = "0.3.5"
systemd = "0.0.7"
url = "0.5.7"
